fix: alignment of "Shipping method" is overflowing to container

--- a/src/styles/pages/checkout/Checkout.module.css
+++ b/src/styles/pages/checkout/Checkout.module.css
@@ -74,10 +74,6 @@
   font-size: 24px;
 }
 
-.save-delivery-info__checkbox {
-  margin-top: 8px;
-}
-
 .shipping-method__title,
 .billing-address__title {
   font-size: 17px;
