--- a/src/styles/pages/checkout/Delivery.module.css
+++ b/src/styles/pages/checkout/Delivery.module.css
@@ -1,5 +1,5 @@
 .delivery {
-  --_gap: 12px;
+  --_gap: 14px;
 
   display: flex;
   flex-direction: column;
@@ -9,8 +9,18 @@
   padding: 1rem 0;
 }
 
+.delivery__title {
+  color: hsl(var(--body));
+  font-size: 24px;
+  margin-bottom: 8px;
+}
+
 .input-fields {
   display: flex;
   flex-direction: column;
   gap: var(--_gap);
+}
+
+.save-delivery-info__checkbox {
+  margin: var(--_gap) 0 2rem 0;
 }
